Fixed search icon not visible on dark theme

--- a/public/style/scss/vars.scss
+++ b/public/style/scss/vars.scss
@@ -8,6 +8,7 @@
   --cookie-box-background: #333;
   --mobile-menu-background: #fff;
   --background-hover-color: #eee;
+  --inverted-text-color: black;
 }
 
 .dark-theme {
@@ -17,4 +18,5 @@
   --cookie-box-background: #1a1a1a;
   --mobile-menu-background: #333;
   --background-hover-color: #1a1a1a;
+  --inverted-text-color: black;
 }
